# oai-mcp

./: README.md  pyproject.toml  test.py
mcps/fsapi/: pyproject.toml
mcps/fsapi/src/fsapi/: main.py
src/oai_mcp/: __init__.py  oai_mcp.py  utils.py
storage/: ip.txt
