[project]
name = "fsapi"
version = "1.0.0"
description = "MCP to provide simple filesystem APIs"
authors = [
    {name = "tndo", email = "dotrann.1412@gmail.com"},
]
dependencies = [
    "fastmcp",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.scripts]
mcp-fsapi = "fsapi.main:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fsapi"]
